--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,7 @@
+<html>
+<head>
+  <title>Help | Ruby on Rails Tutorial Sample App</title>
+<body>
 <h1>Help</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
@@ -6,3 +10,5 @@
   <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
   book</a>.
 </p>
+</body>
+</html>
